--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
         android:theme="@style/Theme.Stjosephappofficial"
         tools:targetApi="34">
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.SplashActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.App.Starting"
+            android:theme="@style/Theme.Stjosephappofficial"
             android:hardwareAccelerated="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,10 +27,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.MainActivity" android:exported="false"/>"
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713"/>
+            android:value="ca-app-pub-4246199849789587~9714608451" />
+            <!--android:value="ca-app-pub-3940256099942544~3347511713" ID DE PRUEBA-->
+            <!--android:value="ca-app-pub-4246199849789587~9714608451" ID ORIGINAL OJO, ESTE VA CUANDO VAMOS A ACTUALIZAR-->
     </application>
 
 </manifest>
