--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -18,22 +18,25 @@
         <activity
             android:name=".ui.SplashActivity"
             android:exported="true"
+            android:hardwareAccelerated="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Stjosephappofficial"
-            android:hardwareAccelerated="true">
+            android:theme="@style/Theme.Stjosephappofficial">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MainActivity" android:exported="false"/>"
+        <activity
+            android:name=".ui.MainActivity"
+            android:screenOrientation="portrait"
+            android:exported="false" />"
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-4246199849789587~9714608451" />
-            <!--android:value="ca-app-pub-3940256099942544~3347511713" ID DE PRUEBA-->
-            <!--android:value="ca-app-pub-4246199849789587~9714608451" ID ORIGINAL OJO, ESTE VA CUANDO VAMOS A ACTUALIZAR-->
+        <!--android:value="ca-app-pub-3940256099942544~3347511713" ID DE PRUEBA-->
+        <!--android:value="ca-app-pub-4246199849789587~9714608451" ID ORIGINAL OJO, ESTE VA CUANDO VAMOS A ACTUALIZAR-->
     </application>
 
 </manifest>
