--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-4246199849789587~9714608451" />
+            android:value="${adMobAppId}" />
         <!--android:value="ca-app-pub-3940256099942544~3347511713" ID DE PRUEBA-->
         <!--android:value="ca-app-pub-4246199849789587~9714608451" ID ORIGINAL OJO, ESTE VA CUANDO VAMOS A ACTUALIZAR-->
     </application>
