--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             android:exported="true"
             android:hardwareAccelerated="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Stjosephappofficial">
+            android:theme="@style/Theme.Stjosephappofficial"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,8 +31,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:exported="false" />"
+            android:exported="false"
+            android:screenOrientation="portrait" />"
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
